force-app/main/default/objects/FIA_Aktivitet__c/FIA_Aktivitet__c.object-meta.xml
<CustomObject>
    <label>FIA Aktiviteter</label>
    <nameField>
        <displayFormat>FIA-{000000}</displayFormat>
        <label>FIA Leveranse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIA Aktiviteter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>