force-app/main/default/objects/FIA_Aktivitet__c/fields/FIA_Leveranse__c.field-meta.xml
<CustomField>
    <fullName>FIA_Leveranse__c</fullName>
    <label>FIA Levernanse</label>
    <referenceTo>TAG_FIA_Leveranser__c</referenceTo>
    <relationshipName>FIA_Leveranser</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>