force-app/main/default/objects/FIA_Aktivitet__c/fields/Leveranse__c.field-meta.xml
<CustomField>
    <fullName>Leveranse__c</fullName>
    <label>Leveranse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oppfølgingssamtalen</fullName>
            </value>
            <value>
                <fullName>Tilretteleggingsplikt og medvirkningsplikt</fullName>
            </value>
            <value>
                <fullName>Videreutvikle sykefraværsrutiner</fullName>
            </value>
            <value>
                <fullName>Enkel arbeidsmiljøkartlegging</fullName>
            </value>
            <value>
                <fullName>Psykisk helse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>