force-app/main/default/objects/FIA_Aktivitet__c/fields/Tentativ_Frist__c.field-meta.xml
<CustomField>
    <fullName>Tentativ_Frist__c</fullName>
    <label>Tentativ Frist</label>
    <type>Date</type>
</CustomField>